2007-10-12 Sarka Todorova <sarka.todorova@cern.ch>
        * extend RPC layer identifier to ensure proper orientation of local coordinates
	* tagged as MuonTrackingGeometry-00-00-57

2007-10-03 Sarka Todorova <sarka.todorova@cern.ch>
        * include transcript of inert material into layers 
	* rails back in build
	* tagged as MuonTrackingGeometry-00-00-56

2007-09-24 Sarka Todorova <sarka.todorova@cern.ch>
        * fix transcript of polygons/trapezoids
	* disable building of rails (runs out of memory) 
	* tagged as MuonTrackingGeometry-00-00-55

2007-09-10 Sarka Todorova <sarka.todorova@cern.ch>
        * fix phi span for cylinder volumes
	* fix orientation of spacer beams in endcap 
	* tagged as MuonTrackingGeometry-00-00-54

2007-09-03 Sarka Todorova <sarka.todorova@cern.ch>
        * fix uninitialized pointers ( prevent crash in case of wrong MTG configuration )
	* tagged as MuonTrackingGeometry-00-00-53

2007-09-02 Sarka Todorova <sarka.todorova@cern.ch>
        * check pointers before delete in finalization
        * fix bug in transcrit of trapezoid volumes
	* tagged as MuonTrackingGeometry-00-00-52

2007-09-01 Sarka Todorova <sarka.todorova@cern.ch>
        * fix the ambiguity in MIMB (would not compile with TrkGeometry-00-10-04)
	* tagged as MuonTrackingGeometry-00-00-51

2007-08-31 Sarka Todorova <sarka.todorova@cern.ch>
        * fix the scaling of averaged material (dilution)
	* tagged as MuonTrackingGeometry-00-00-50

2007-07-27 Sarka Todorova <sarka.todorova@cern.ch>
        * fix an invalid memory access 
	* tagged as MuonTrackingGeometry-00-00-49

2007-07-04 Sarka Todorova <sarka.todorova@cern.ch>
        * fix initialization of magnetic field properties 
	* tagged as MuonTrackingGeometry-00-00-48

2007-06-27 Sarka Todorova <sarka.todorova@cern.ch>
	* couple of fixes concerning the identification:  
        - misidentified phi index for TGC stations fixed
	- reference position added for RPC/CSC, as well as check of TGC displacement